--- a/WritingAssistant/appsettings.json
+++ b/WritingAssistant/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NETPRTONY;Database=WritingAssistantDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=NETPRTONY;Database=WritingAssistantDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning"
     }
   },
-  "AllowedHosts": "*"
+// "AllowedHosts": "*"
 }
